chamber/styles/small.css
/* prevents font size adjustments when orientation changes */
html {
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
}
/* applies natural box layout to all elements */

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

h1,
h2,
h3,
p {
  font-family: "IBM Plex Sans", sans-serif;
  /* margin: 0 2vw; */
}

p,
h4,
h5,
h5 {
  font-family: "IBM Plex Sans Condensed", sans-serif;
}
/* h3 {
  padding-left: 2rem;
} */
/* ---------------- BODY ------------------ */
body {
  background-color: white;
}

#info-banner {
  display: none;
  height: 3rem;
  text-align: center;
  padding-top: 0.25rem;
  color: #a67458;
  font-weight: bolder;
  background-color: #c4eef290;
  border: 2px solid #a67458;
}
/* ---------------- HEADER ------------------ */
header {
  background-color: #025159;
  color: white;
  display: grid;
  grid-template-columns: 2fr 4fr 1fr;
  /* grid-template-rows: 40% 30% 20%; */
  /* flex-flow: column;
     align-items: center;
   justify-content: center; */
  font-family: "IBM Plex Sans Condensed", sans-serif;
  padding: 0.5rem;
}
header #discover {
  height: 25vh;
}
.social {
  grid-column: 3 / 4;
  grid-row: 1 / 3;
  margin-left: 1rem;
}

#primaryNav {
  z-index: 10;
}
header h1 {
  grid-column: 2 / 3;
  grid-row: 1 / 2;
  text-align: left;
  font-size: medium;
}
header p {
  grid-column: 2 / 3;
  font-size: x-small;
}

div.date {
  grid-column: 1 / 4;
  grid-row: 3;
  padding-top: 0.25rem;
  text-align: center;
  justify-content: center;
  border: 1px solid #a67458;
}
.hover img {
  width: 100%;
}
.hero img {
  width: 100%;
}

header img.logo {
  width: 3.5rem;
}
header img {
  width: 1.75rem;
}
#discover header.serve {
  display: none;
}
/* ---------------- NAVIGATION ------------------ */
nav button {
  font-size: 2.5rem;
  background: transparent;
  border: none;
  color: #555;
}
nav {
  background-color: #a67458;
  font-family: "IBM Plex Sans", sans-serif;
  padding-left: 0.5rem;
}
/* nav ul means child of */
nav ul {
  list-style-type: none;
}

span {
  padding-left: 2vw;
}
span#demo {
  color: white;
}
nav ul li a {
  display: block;
  border: none;
  padding: 0.5rem 1rem;
  text-decoration: none;
  padding: 0.8rem 2vw;
  padding-left: 2vw;
  font-family: "IBM Plex Sans Condensed", sans-serif;
  color: #fff;
  font-weight: 800;
  font-size: 1rem;
  /* border-top: 1px solid rgba(0, 0, 0, 0.5); 
    box-shadow: 0 1px 1px #000000;  */
}
/* active code should be placed before hover */
/* then add the active class to the list index page */
nav ul li .active {
  background-color: rgba(0, 0, 0, 0.2);

  color: white;
}
/* nav ul li a:hover {
  background-color: #c4eef2;
  font-family: "IBM Plex Sans Condensed", sans-serif;
  color: #025159;
  font-weight: 800;
} */

nav ul li a:hover {
  background-color: #c4eef2;
  font-family: "IBM Plex Sans Condensed", sans-serif;
  color: #025159;
  font-weight: 800;
}

nav ul {
  display: none;
  padding: 0;
  margin: 0;
}
nav ul.open {
  display: block;
}

/* #hamburgerBtn span:nth-child(1) {
    display: block;
  } */
#hamburgerBtn span:nth-child(2) {
  display: none;
}
#hamburgerBtn.open span:nth-child(1) {
  display: none;
}
#hamburgerBtn.open span:nth-child(2) {
  display: block;
}
body {
  background-color: white;
}
/* ---------------- MAIN ------------------ */
/* .content > main {
  background-color: #c4eef2;
} */

.hero,
.event,
.weather,
.news,
.join-us,
.spotlight {
  color: black;
  border-bottom: gray 1px solid;
  padding: 0.5rem;
  box-shadow: inset 0 -3em 3em rgb(0 0 0 / 10%), 0 0 0 2px rgb(255 255 255),
    0.3em 0.3em 1em rgb(0 0 0 / 30%);
}
main {
  display: grid;
  margin: 0 auto;
  padding: 0.5rem;

  /* grid-template-rows: repeat(5, 1fr); */
  color: #025159;
  /* border-left: 0.5rem solid #025159;
  border-right: 0.5rem solid #025159; */
}
main#home {
  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));

  grid-column: 1/1;
  row-gap: 0.5rem;
}
/* main#join {
  display: grid;
  margin: 0 auto;
  padding: .5rem;
}  */
a#join-here {
  background-color: #a67458;
  color: #fff;
  margin-bottom: 2rem;
  padding: 0.5rem 2.5rem;
  border-radius: 5%;
  border: none;
  text-decoration: none;
  
}
div.hero {
  grid-column: 1 / 1;
  grid-row: 1 / 2;
  width: 99%;
  text-align: center;
  box-shadow: inset 0 -3em 3em rgb(0 0 0 / 10%), 0 0 0 2px rgb(255 255 255),
    0.3em 0.3em 1em rgb(0 0 0 / 30%);
}

.hero h2 {
  font-weight: 800;
  margin: 0 0 0.5rem;
  border-bottom: 1px solid #000;
  color: #a67458;
  text-shadow: 2px 2px #025159;
}
div.hero p {
  margin: 0;
  color: white;
}

div.weather {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  background-color: #c4eef290;
  width: 99%;
}

div.news {
  grid-column: 1 / 1;
  width: 99%;
  text-align: center;
  /* grid-row: 4 / 5; */
}

img.power-out {
  width: 100%;
  box-shadow: inset 0 -3em 3em rgb(0 0 0 / 10%), 0 0 0 2px rgb(255 255 255),
    0.3em 0.3em 1em rgb(0 0 0 / 30%);
}
div.spotlight {
  grid-column: 1 / 1;
  width: 99%;
  gap: 0.5rem;
}

div.spotlight-1 {
  grid-row: 1 / 2;
  border-bottom: gray 1px solid;
  padding: 0 3rem;
  padding-bottom: 4rem;
  height: 45%;
  margin-bottom: 1rem;
  text-align: center;
  box-shadow: inset 0 -3em 3em rgb(0 0 0 / 10%), 0 0 0 2px rgb(255 255 255),
    0.3em 0.3em 1em rgb(0 0 0 / 30%);
}
.spotlight-1 img {
  width: 75%;
}

div.spotlight-2 {
  grid-row: 2 / 3;
  border-bottom: gray 1px solid;
  /* padding: 0 3rem; */
  /* height: 45%; */
  text-align: center;
}
/* .spotlight-2 img {
  width: 75%;
} */

.spotlight-3 {
  grid-row: 3 / 4;
  /* border: gray 1px solid; */
  padding: 0.25rem;
  display: none;
  height: 0px;
  text-align: center;
  /* display: flex; */
}
/* ... */

